<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.marknguyen.customappdevelopment.fragment.HomeFragment"
        android:label="@string/nav_search">
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/weatherDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/savedFragment"
        android:name="com.marknguyen.customappdevelopment.fragment.SavedFragment"
        android:label="@string/nav_saved">
        <action
            android:id="@+id/action_saved_to_detail"
            app:destination="@id/weatherDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.marknguyen.customappdevelopment.fragment.SettingsFragment"
        android:label="@string/nav_settings" />

    <fragment
        android:id="@+id/weatherDetailFragment"
        android:name="com.marknguyen.customappdevelopment.fragment.WeatherDetailFragment"
        android:label="Weather">
        <argument
            android:name="cityName"
            app:argType="string" />
    </fragment>

</navigation>
